artifacts/asupersync/bd-1now.4.6/stage_outputs/abnormal_exit.txt
   Compiling frankenengine-engine v0.1.0 (/data/projects/franken_engine/crates/franken-engine)
warning: unused import: `ResourceBound`
  --> /data/projects/franken_engine/crates/franken-engine/src/aara_resource_consumer.rs:33:37
   |
33 |     CertificateVerdict, EffectKind, ResourceBound, ResourceCertificate, ResourceDimension,
   |                                     ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `aara_resource_certificate::CertificateVerdict: Hash` is not satisfied
   --> /data/projects/franken_engine/crates/franken-engine/src/aara_resource_consumer.rs:158:31
    |
146 | #[derive(Debug, Clone, PartialEq, Eq, PartialOrd, Ord, Hash, Serialize, Deserialize)]
    |                                                        ---- in this derive macro expansion
...
158 |     CertificateNotCertified { verdict: CertificateVerdict },
    |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Hash` is not implemented for `aara_resource_certificate::CertificateVerdict`
    |
help: consider annotating `aara_resource_certificate::CertificateVerdict` with `#[derive(Hash)]`
   --> /data/projects/franken_engine/crates/franken-engine/src/aara_resource_certificate.rs:537:1
    |
537 + #[derive(Hash)]
538 | pub enum CertificateVerdict {
    |

warning: unused variable: `old`
    --> /data/projects/franken_engine/crates/franken-engine/src/s3_fifo_cache_gate.rs:1619:13
     |
1619 |         let old = self.current_epoch;
     |             ^^^ help: if this is intentional, prefix it with an underscore: `_old`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0277`.
warning: `frankenengine-engine` (lib) generated 2 warnings
error: could not compile `frankenengine-engine` (lib) due to 1 previous error; 2 warnings emitted
